@@ -2,7 +2,7 @@ Package: plotseries
 Type: Package
 Title: Time-Series Plots
 Version: 0.2-0
-Date: 2019-12-20
+Date: 2020-02-13
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
@@ -15,7 +15,7 @@ Description: Plot the time-series of a portfolio value or
   based on chapter 15 of "Numerical Methods and
   Optimization in Finance", second edition, by M. Gilli,
   D. Maringer and E. Schumann (2019, ISBN:978-0128150658).
-  Also supported is plotting streaks, i.e.periods of
+  Also supported is plotting streaks, i.e. periods of
   uninterrupted up or down movement.
 Imports: PMwR, datetimeutils, grDevices, graphics,
          neighbours, utils, zoo
