@@ -1,3 +1,8 @@
+2020-02-13  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (plotseries): add arguments
+        for styling streaks charts
+
 2020-01-06  Enrico Schumann  <es@enricoschumann.net>
 
         * R/plotseries.R (plotseries): add 'series.type' "streaks"
